src/codegen/snapshots/dinky_c__codegen__codegen__tests__codegen_main_negation.snap
---
source: src/codegen/codegen.rs
expression: generate_code(input)
---
Ok(
    [
        FunctionDecl(
            "main",
        ),
        Integer(
            110,
        ),
        Negation,
        Return,
    ],
)
