src/codegen/snapshots/dinky_c__codegen__codegen__tests__codegen_simple_main.snap
---
source: src/codegen/codegen.rs
expression: generate_code(input)
---
Ok(
    [
        FunctionDecl(
            "main",
        ),
        Integer(
            0,
        ),
        Return,
    ],
)
